[tool.poetry]
name = "tech-empire-scraper"
version = "1.0.0"
description = ""
authors = ["Dh137"]
package-mode = false 

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.2"
uvicorn = {extras = ["standard"], version = "0.32.0"}
pymongo = "4.9.1"
openai = "1.30.3"
httpx = "0.27.0"
feedparser = "6.0.11"
python-dotenv = "1.0.1"
certifi = "2024.8.30"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"